--- a/Newsletter-Signup/style.css
+++ b/Newsletter-Signup/style.css
@@ -36,7 +36,11 @@ body {
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
-.form-signin input[type="password"] {
+.middle {
+  border-radius: 0;
+  margin-bottom: -1px;
+}
+.botton {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
